đừng bug nữa
.